--- a/public/items/拓扑图打点工具/index.html
+++ b/public/items/拓扑图打点工具/index.html
@@ -87,12 +87,14 @@
 				<li :style="{'color':active==item.id?'#ff0000':''}" v-for='item in lines' :key="item.id"
 					@click='selectLine(item)'>
 					<span>{{item.name}}</span>
+					<span @click='uploadImg(item)'>图</span>
 					<span @click='delet(item)'>×</span>
 				</li>
 			</ul>
 			<el-button @click="exports" size="mini">导出</el-button>
 			<el-button @click="imports" size="mini">导入</el-button>
 			<el-button @click="restore" size="mini">恢复</el-button>
+			<el-button @click="uploadVisible = true" size="mini">上传图</el-button>
 			<!-- <el-button @click="viewLine" size="mini">查看效果</el-button> -->
 		</div>
 
@@ -103,7 +105,34 @@
 				<el-button @click="importVisible = false">取 消</el-button>
 				<el-button type="primary" @click="importsData">确 定</el-button>
 			</span>
+			
 		</el-dialog>
+
+		<el-dialog title="上传" :visible.sync="uploadVisible" width="30%" :before-close="uploadhandleClose">
+			<el-upload class="avatar-uploader" action="/upload/loadImages" :show-file-list="false"
+				:on-success="handleAvatarSuccess">
+				<img v-if="imageUrl" :src="imageUrl" class="avatar">
+				<i v-else class="el-icon-plus avatar-uploader-icon"></i>
+			</el-upload>
+			<div>
+				<img class="avatar" v-for="(item,index) in imageUrls" :src="item" alt="">
+			</div>
+			<span slot="footer" class="dialog-footer">
+				<el-button @click="uploadVisible = false">取 消</el-button>
+				<el-button type="primary" @click="uploadVisible = false">确 定</el-button>
+			</span>
+		</el-dialog>
+		<el-dialog title="选择图" :visible.sync="selectVisible" width="30%" :before-close="uploadhandleClose"> 
+			<div>
+				<img class="avatar" v-for="(item,index) in imageUrls" :class="index === selectImgsIds ? 'active-img' : ''" :src="item" alt="" @click="selectImgsIds = index">
+			</div>
+			<span slot="footer" class="dialog-footer">
+				<el-button @click="selectVisible = false">取 消</el-button>
+				<el-button type="primary" @click="submitImg">确 定</el-button>
+			</span>
+		</el-dialog>
+
+
 		<div class="control">
 			<span style="cursor: pointer;"><label for="input1">点击选择背景图</label> </span>
 			<span style="cursor: pointer;"><label for="filteImg">选择粒子图</label> </span>
